--- a/package.json
+++ b/package.json
@@ -38,7 +38,7 @@
     "@angular-devkit/build-angular": "~12.1.3",
     "@angular/cli": "~12.1.3",
     "@angular/compiler-cli": "~12.1.0-",
-    "@netlify/plugin-angular-universal": "^1.0.0",
+    "@netlify/plugin-angular-universal": "github:netlify/netlify-plugin-angular-universal#ll/fix-template-path",
     "@nguniversal/builders": "~12.1.0",
     "@types/express": "^4.17.8",
     "@types/jasmine": "~3.8.0",
