--- a/package.json
+++ b/package.json
@@ -27,7 +27,7 @@
     "@angular/platform-browser-dynamic": "~12.1.0-",
     "@angular/platform-server": "~12.1.0-",
     "@angular/router": "~12.1.0-",
-    "@netlify/plugin-angular-universal": "github:netlify/netlify-plugin-angular-universal#28a63809a609e0e1917ffc39ab9c81874357263f",
+    "@netlify/plugin-angular-universal": "github:netlify/netlify-plugin-angular-universal#ll/fix-template-path",
     "@nguniversal/express-engine": "~12.1.0",
     "angular-in-memory-web-api": "~0.11.0",
     "express": "^4.15.2",
